--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
         <title>lesson 17</title>
     </head>
     <body>
@@ -14,109 +14,140 @@
             </header>
             <main class="main">
                 <div class="page">
-                    <div class="page__wrapper">
-                        <div class="page__container">
-                            <div class="page__our our">
-                                <div class="our__titles titles titles--center">
-                                    <h1 class="our__title title">Our Products</h1>
-                                    <div class="our__subtitle subtitle">
-                                        Add our products to weekly lineup
+                    <div class="page__wrapper wrapper">
+                        <div class="wraper__module">
+                            <div class="wraper__container">
+                                <div class="page__module module">
+                                    <div
+                                        class="module__titles titles titles--center">
+                                        <h1
+                                            class="module__title title white-text">
+                                            module Products
+                                        </h1>
+                                        <div
+                                            class="module__subtitle subtitle white-text">
+                                            Add module products to weekly lineup
+                                        </div>
+                                        <ul class="module__list list-module">
+                                            <li
+                                                class="list-module__item white-text">
+                                                Gold
+                                            </li>
+                                            <li
+                                                class="list-module__item white-text">
+                                                Diamond
+                                            </li>
+                                            <li
+                                                class="list-module__item white-text">
+                                                Bronze
+                                            </li>
+                                            <li
+                                                class="list-module__item white-text">
+                                                Silver
+                                            </li>
+                                        </ul>
                                     </div>
-                                    <ul class="our__list list-our">
-                                        <li class="list-our__item">Gold</li>
-                                        <li class="list-our__item">Diamond</li>
-                                        <li class="list-our__item">Bronze</li>
-                                        <li class="list-our__item">Silver</li>
+                                    <ul class="module__items">
+                                        <li class="module__column">
+                                            <div class="module__item item">
+                                                <div class="item__image">
+                                                    <img
+                                                        src="img/main/items/our/item-1.webp"
+                                                        alt="Image">
+                                                </div>
+                                                <div class="item__info">
+                                                    <div
+                                                        class="item__name white-text">
+                                                        Embossed hoop earrings
+                                                    </div>
+                                                    <div
+                                                        class="item__price white-text">
+                                                        $144.00
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="module__column">
+                                            <div class="module__item item">
+                                                <div class="item__image">
+                                                    <img
+                                                        src="img/main/items/our/item-2.webp"
+                                                        alt="Image">
+                                                </div>
+                                                <div class="item__info">
+                                                    <div
+                                                        class="item__name white-text">
+                                                        Embossed hoop earrings
+                                                    </div>
+                                                    <div
+                                                        class="item__price white-text">
+                                                        $144.00
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="module__column">
+                                            <div class="module__item item">
+                                                <div class="item__image">
+                                                    <img
+                                                        src="img/main/items/our/item-3.webp"
+                                                        alt="Image">
+                                                </div>
+                                                <div class="item__info">
+                                                    <div
+                                                        class="item__name white-text">
+                                                        Embossed hoop earrings
+                                                    </div>
+                                                    <div
+                                                        class="item__price white-text">
+                                                        $144.00
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="module__column">
+                                            <div class="module__item item">
+                                                <div class="item__image">
+                                                    <img
+                                                        src="img/main/items/our/item-4.webp"
+                                                        alt="Image">
+                                                </div>
+                                                <div class="item__info">
+                                                    <div
+                                                        class="item__name white-text">
+                                                        Embossed hoop earrings
+                                                    </div>
+                                                    <div
+                                                        class="item__price white-text">
+                                                        $144.00
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
                                     </ul>
                                 </div>
-                                <ul class="our__items">
-                                    <li class="our__column">
-                                        <div class="our__item item">
-                                            <div class="item__image">
-                                                <img
-                                                    src="img/main/items/our/item-1.webp"
-                                                    alt="Image" />
-                                            </div>
-                                            <div class="item__info">
-                                                <div class="item__name">
-                                                    Embossed hoop earrings
-                                                </div>
-                                                <div class="item__price">
-                                                    $144.00
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="our__column">
-                                        <div class="our__item item">
-                                            <div class="item__image">
-                                                <img
-                                                    src="img/main/items/our/item-2.webp"
-                                                    alt="Image" />
-                                            </div>
-                                            <div class="item__info">
-                                                <div class="item__name">
-                                                    Embossed hoop earrings
-                                                </div>
-                                                <div class="item__price">
-                                                    $144.00
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="our__column">
-                                        <div class="our__item item">
-                                            <div class="item__image">
-                                                <img
-                                                    src="img/main/items/our/item-3.webp"
-                                                    alt="Image" />
-                                            </div>
-                                            <div class="item__info">
-                                                <div class="item__name">
-                                                    Embossed hoop earrings
-                                                </div>
-                                                <div class="item__price">
-                                                    $144.00
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="our__column">
-                                        <div class="our__item item">
-                                            <div class="item__image">
-                                                <img
-                                                    src="img/main/items/our/item-4.webp"
-                                                    alt="Image" />
-                                            </div>
-                                            <div class="item__info">
-                                                <div class="item__name">
-                                                    Embossed hoop earrings
-                                                </div>
-                                                <div class="item__price">
-                                                    $144.00
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
                             </div>
+                        </div>
 
-                            <div class="page__our our">
-                                <div class="our__titles titles titles--center">
-                                    <h2 class="our__title title">
+                        <div class="wraper__container">
+                            <div class="page__module module">
+                                <div
+                                    class="module__titles titles titles--center section--most">
+                                    <h2 class="module__title title">
                                         Most Popular Product
                                     </h2>
-                                    <div class="our__subtitle subtitle">
+                                    <div
+                                        class="module__subtitle subtitle grey--text">
                                         Best Seller Product This Week!
                                     </div>
                                 </div>
-                                <ul class="our__items">
-                                    <li class="our__column">
-                                        <div class="our__item item">
-                                            <div class="item__image image">
+                                <ul class="module__items">
+                                    <li class="module__column column--hover">
+                                        <div class="module__item item">
+                                            <div class="item__img image">
                                                 <img
-                                                    src="img/main/items/our/item-1.webp"
-                                                    alt="Image" />
+                                                    src="img/main/items/most/item-1.webp"
+                                                    alt="Image">
                                             </div>
                                             <div class="item__info">
                                                 <div class="item__name">
@@ -128,12 +159,12 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li class="our__column">
-                                        <div class="our__item item">
-                                            <div class="item__image">
+                                    <li class="module__column column--hover">
+                                        <div class="module__item item">
+                                            <div class="item__img">
                                                 <img
-                                                    src="img/main/items/our/item-2.webp"
-                                                    alt="Image" />
+                                                    src="img/main/items/most/item-2.webp"
+                                                    alt="Image">
                                             </div>
                                             <div class="item__info">
                                                 <div class="item__name">
@@ -145,12 +176,12 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li class="our__column">
-                                        <div class="our__item item">
-                                            <div class="item__image">
+                                    <li class="module__column column--hover">
+                                        <div class="module__item item">
+                                            <div class="item__img">
                                                 <img
-                                                    src="img/main/items/our/item-3.webp"
-                                                    alt="Image" />
+                                                    src="img/main/items/most/item-3.webp"
+                                                    alt="Image">
                                             </div>
                                             <div class="item__info">
                                                 <div class="item__name">
@@ -162,12 +193,12 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li class="our__column">
-                                        <div class="our__item item">
-                                            <div class="item__image">
+                                    <li class="module__column column--hover">
+                                        <div class="module__item item">
+                                            <div class="item__img">
                                                 <img
-                                                    src="img/main/items/our/item-4.webp"
-                                                    alt="Image" />
+                                                    src="img/main/items/most/item-4.webp"
+                                                    alt="Image">
                                             </div>
                                             <div class="item__info">
                                                 <div class="item__name">
@@ -180,6 +211,11 @@
                                         </div>
                                     </li>
                                 </ul>
+                                <div class="module__button">
+                                    <a class="module__btn btn--center" href="#">
+                                        View More
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
