fixed a bug with the background in block 3

--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -165,78 +165,78 @@
                 </div>
               </div>
             </div>
-
-            <div class="wraper__container">
-              <div class="page__module popular">
-                <div class="popular__titles titles">
-                  <h2 class="popular__title title">Ours Popular Products</h2>
-                  <div class="popular__subtitle subtitle grey--color">
-                    Best Seller Product This Week!
+            <div class="popular">
+              <div class="popular__container">
+                <div class="page__module">
+                  <div class="popular__titles titles">
+                    <h2 class="popular__title title">Ours Popular Products</h2>
+                    <div class="popular__subtitle subtitle grey--color">
+                      Best Seller Product This Week!
+                    </div>
                   </div>
+                  <ul class="popular__items">
+                    <li class="popular__column">
+                      <div class="popular__item item">
+                        <div class="item__image item__image--popular">
+                          <img
+                            src="img/main/items/popular/item-1.webp"
+                            alt="Image" />
+                        </div>
+                        <div class="item__info">
+                          <div class="item__name item__name--popular">
+                            Engagement Rings – a Buyer’s Guide
+                          </div>
+                          <div class="item__text">
+                            Video marketing is a powerful marketing strategy
+                            that allows you to portray an advertisement in the
+                            form of a story, which can
+                          </div>
+                          <a class="item__link" href="#">Read more</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="popular__column">
+                      <div class="popular__item item">
+                        <div class="item__image item__image--popular">
+                          <img
+                            src="img/main/items/popular/item-2.webp"
+                            alt="Image" />
+                        </div>
+                        <div class="item__info">
+                          <div class="item__name item__name--popular">
+                            Engagement Rings – a Buyer’s Guide
+                          </div>
+                          <div class="item__text">
+                            Video marketing is a powerful marketing strategy
+                            that allows you to portray an advertisement in the
+                            form of a story, which can
+                          </div>
+                          <a class="item__link" href="#">Read more</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="popular__column">
+                      <div class="popular__item item">
+                        <div class="item__image item__image--popular">
+                          <img
+                            src="img/main/items/popular/item-3.webp"
+                            alt="Image" />
+                        </div>
+                        <div class="item__info">
+                          <div class="item__name item__name--popular">
+                            Engagement Rings – a Buyer’s Guide
+                          </div>
+                          <div class="item__text">
+                            Video marketing is a powerful marketing strategy
+                            that allows you to portray an advertisement in the
+                            form of a story, which can
+                          </div>
+                          <a class="item__link" href="#">Read more</a>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
                 </div>
-                <ul class="popular__items">
-                  <li class="popular__column">
-                    <div class="popular__item item">
-                      <div class="item__image item__image--popular">
-                        <img
-                          src="img/main/items/popular/item-1.webp"
-                          alt="Image" />
-                      </div>
-                      <div class="item__info">
-                        <div class="item__name item__name--popular">
-                          Engagement Rings – a Buyer’s Guide
-                        </div>
-                        <div class="item__text">
-                          Video marketing is a powerful marketing strategy that
-                          allows you to portray an advertisement in the form of
-                          a story, which can
-                        </div>
-                        <a class="item__link" href="#">Read more</a>
-                      </div>
-                    </div>
-                  </li>
-                  <li class="popular__column">
-                    <div class="popular__item item">
-                      <div class="item__image item__image--popular">
-                        <img
-                          src="img/main/items/popular/item-2.webp"
-                          alt="Image" />
-                      </div>
-                      <div class="item__info">
-                        <div class="item__name item__name--popular">
-                          Engagement Rings – a Buyer’s Guide
-                        </div>
-                        <div class="item__text">
-                          Video marketing is a powerful marketing strategy that
-                          allows you to portray an advertisement in the form of
-                          a story, which can
-                        </div>
-                        <a class="item__link" href="#">Read more</a>
-                      </div>
-                    </div>
-                  </li>
-                  <li class="popular__column">
-                    <div class="popular__item item">
-                      <div class="item__image item__image--popular">
-                        <img
-                          src="img/main/items/popular/item-3.webp"
-                          alt="Image" />
-                      </div>
-                      <div class="item__info">
-                        <div class="item__name item__name--popular">
-                          Engagement Rings – a Buyer’s Guide
-                        </div>
-                        <div class="item__text">
-                          Video marketing is a powerful marketing strategy that
-                          allows you to portray an advertisement in the form of
-                          a story, which can
-                        </div>
-                        <a class="item__link" href="#">Read more</a>
-                      </div>
-                    </div>
-                  </li>
-                  
-                </ul>
               </div>
             </div>
           </div>
