added first sectoin

--- a/lesson_18/index.html
+++ b/lesson_18/index.html
@@ -139,9 +139,7 @@
                   </div>
                 </li>
                 <li class="menu__item menu__item--parent">
-                  <a href="#" class="menu__link">Contact
-
-                  </a>
+                  <a href="#" class="menu__link">Contact</a>
                   <div class="sub-menu">
                     <ul class="sub-menu__list">
                       <li class="sub-menu__item sub-menu__item--title">
@@ -181,7 +179,33 @@
           </div>
         </div>
       </header>
-      <main class="main"></main>
+      <main class="page">
+        <div class="page__hero hero">
+          <div class="hero__container">
+            <div class="hero__body">
+              <h1 class="hero__title">Individual Jewelry Design</h1>
+              <div class="hero__text">
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered
+                </p>
+              </div>
+              <div class="hero__links">
+                <a href="#" class="hero__link hero__link--btn">Shop Now</a>
+                <a href="#" class="hero__link hero__link--link">Video Now</a>
+              </div>
+            </div>
+            <div class="hero__images">
+              <div class="hero__image image hero__image--bottom">
+                <img src="img/hero/jewellery-1.webp" alt="Jewellery" />
+              </div>
+              <div class="hero__image image hero__image--top">
+                <img src="img/hero/jewellery-2.webp" alt="Jewellery" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
       <footer class="footer"></footer>
     </div>
     <script src="js/script.js"></script>
