completed the task

--- a/lesson_18/index.html
+++ b/lesson_18/index.html
@@ -180,7 +180,7 @@
         </div>
       </header>
       <main class="page">
-        <div class="page__hero hero">
+        <section class="hero">
           <div class="hero__container">
             <div class="hero__body">
               <h1 class="hero__title">Individual Jewelry Design</h1>
@@ -204,9 +204,58 @@
               </div>
             </div>
           </div>
-        </div>
+        </section>
+
+        <section class="jewellery">
+          <div class="jewellery__container">
+            <div class="jewellery__body">
+              <h2 class="jewellery__title">Jewellery Collection</h2>
+              <div class="jewellery__links">
+                <a href="#" class="jewellery__link">Shop Now</a>
+              </div>
+            </div>
+            <div class="jewellery__image">
+              <img src="img/hero/image.webp" alt="Jewellery" />
+            </div>
+            <div class="jewellery__content">
+              <div class="jewellery__text">
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority
+                </p>
+              </div>
+              <div class="jewellery__item">
+                <p>
+                  <span>Handcrafted</span>
+                  & ethically Sources
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="jewellery__background">
+            <div class="jewellery__decor-background">
+              <img
+                class="jewellery__left-decor"
+                src="img/main/decor/line-left.svg"
+                alt="Decor" />
+              <img
+                class="jewellery__right-decor"
+                src="img/main/decor/line-right.svg"
+                alt="Decor" />
+            </div>
+            <div class="jewellery__image-background">
+              <div class="jewellery__bottom-bg">
+                <img src="img/main/decor/bg-left.webp" alt="Background image" />
+              </div>
+              <div class="jewellery__right-bg">
+                <img src="img/main/decor/bg-right.webp" alt="Background image" />
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">footer</footer>
     </div>
     <script src="js/script.js"></script>
   </body>
