--- a/lesson_18/index.html
+++ b/lesson_18/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>lesson 18</title>
   </head>
   <body>
@@ -197,10 +197,10 @@
             </div>
             <div class="hero__images">
               <div class="hero__image image hero__image--bottom">
-                <img src="img/hero/jewellery-1.webp" alt="Jewellery" />
+                <img src="img/hero/jewellery-1.webp" alt="Jewellery">
               </div>
               <div class="hero__image image hero__image--top">
-                <img src="img/hero/jewellery-2.webp" alt="Jewellery" />
+                <img src="img/hero/jewellery-2.webp" alt="Jewellery">
               </div>
             </div>
           </div>
@@ -215,7 +215,7 @@
               </div>
             </div>
             <div class="jewellery__image">
-              <img src="img/hero/image.webp" alt="Jewellery" />
+              <img src="img/hero/image.webp" alt="Jewellery">
             </div>
             <div class="jewellery__content">
               <div class="jewellery__text">
@@ -238,18 +238,18 @@
               <img
                 class="jewellery__left-decor"
                 src="img/main/decor/line-left.svg"
-                alt="Decor" />
+                alt="Decor">
               <img
                 class="jewellery__right-decor"
                 src="img/main/decor/line-right.svg"
-                alt="Decor" />
+                alt="Decor">
             </div>
             <div class="jewellery__image-background">
               <div class="jewellery__bottom-bg">
-                <img src="img/main/decor/bg-left.webp" alt="Background image" />
+                <img src="img/main/decor/bg-left.webp" alt="Background image">
               </div>
               <div class="jewellery__right-bg">
-                <img src="img/main/decor/bg-right.webp" alt="Background image" />
+                <img src="img/main/decor/bg-right.webp" alt="Background image">
               </div>
             </div>
           </div>
