--- a/lesson_19/index.html
+++ b/lesson_19/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-    <title>lesson 17</title>
+    <title>lesson 19</title>
   </head>
   <body>
     <div class="wraper">
       <header class="header">
-        <div class="header__container"></div>
+        <div class="header__container">
+
+        </div>
       </header>
       <main class="main">
         
