--- a/lesson_19/index.html
+++ b/lesson_19/index.html
@@ -11,12 +11,60 @@
     <div class="wraper">
       <header class="header">
         <div class="header__container">
-
+          <nav class="header__navigation">
+            <img src="img/logo.png" alt="Logo" class="header__logo" />
+            <ul class="menu">
+              <li class="menu__item">
+                <a href="#" class="menu__link menu__active">Shop</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Men</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Women</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Combos</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Joggers</a>
+              </li>
+            </ul>
+            <form action="#" class="header__form">
+              <input
+                type="search"
+                name="search"
+                class="header__input"
+                placeholder="Search" />
+              <button class="header__button" type="submit">
+                <img src="img/icons/search.svg" alt="Search" />
+              </button>
+            </form>
+            <div class="header__actions actions-header">
+              <ul class="actions-header__list">
+                <li class="actions-header__item">
+                  <a href="#" class="actions-header__link">
+                    <img src="img/icons/heart.svg" alt="Heart" />
+                  </a>
+                </li>
+                <li class="actions-header__item">
+                  <a href="#" class="actions-header__link">
+                    <img src="img/icons/user.svg" alt="User" />
+                  </a>
+                </li>
+                <li class="actions-header__item">
+                  <a href="#" class="actions-header__link">
+                    <img
+                      src="img/icons/shopping-cart.svg"
+                      alt="Shopping cart" />
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </nav>
         </div>
       </header>
-      <main class="main">
-        
-      </main>
+      <main class="main"></main>
       <footer class="footer"></footer>
     </div>
   </body>
