working on the header adapter

--- a/lesson_19/index.html
+++ b/lesson_19/index.html
@@ -12,24 +12,24 @@
       <header class="header">
         <div class="header__container">
           <nav class="header__navigation">
-            <img src="img/logo.png" alt="Logo" class="header__logo" />
-            <ul class="menu">
-              <li class="menu__item">
-                <a href="#" class="menu__link menu__active">Shop</a>
-              </li>
-              <li class="menu__item">
-                <a href="#" class="menu__link">Men</a>
-              </li>
-              <li class="menu__item">
-                <a href="#" class="menu__link">Women</a>
-              </li>
-              <li class="menu__item">
-                <a href="#" class="menu__link">Combos</a>
-              </li>
-              <li class="menu__item">
-                <a href="#" class="menu__link">Joggers</a>
-              </li>
-            </ul>
+            <a class="header__logo" href="#"><img src="img/logo.png" alt="Logo" class="header__logo" /></a>
+              <ul class="menu">
+                <li class="menu__item">
+                  <a href="#" class="menu__link menu__active">Shop</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Men</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Women</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Combos</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Joggers</a>
+                </li>
+              </ul>
             <form action="#" class="header__form">
               <input
                 type="search"
